--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,20 +2,21 @@
     <string name="app_name">IsoFingerprintDemo</string>
     <string name="SUCCESSINFO">Scanning fingerprint success!</string>
     <string name="FAILEDINFO">Scanning fingerprint failed!</string>
-    <string name="DEVICEFAILED">Not find Fingerprint</string>
-    <string name="MESSAGE">Please press the fingerprints </string>
+    <string name="DEVICEFAILED">Cannot find fingerprint</string>
+    <string name="MESSAGE">Please press the fingerprint</string>
     <string name="MESSAGE1">Please press the first fingerprint</string>
     <string name="MESSAGE2">Please press the second fingerprint</string>
     <string name="MESSAGE3">Please press the third fingerprint</string>
-    <string name="MESSAGE4">Please press the four fingerprint</string>
-    <string name="MESSAGE5">Please press the five fingerprint</string>
-    <string name="MatchSuccess">match success! matching degree :</string>
-    <string name="MatchFailed">match failed!</string>
-    <string name="Cleared">Cleared success</string>
-    <string name="ClearedFail">Clear Fail!</string>
+    <string name="MESSAGE4">Please press the fourth fingerprint</string>
+    <string name="MESSAGE5">Please press the fifth fingerprint</string>
+    <string name="MatchSuccessScore">Match success! Match score: </string>
+    <string name="MatchSuccess">Match success!</string>
+    <string name="MatchFailed">Match failed!</string>
+    <string name="Cleared">Clear success</string>
+    <string name="ClearedFail">Clear fail!</string>
     <string name="entry">Successful entry</string>
     <string name="entrybutton">Fingerprint entry</string>
     <string name="matchbutton">Fingerprint matching</string>
     <string name="clearlogbutton">Clear log</string>
-    <string name="cleardata">Clear Fingerprint Data</string>
+    <string name="cleardata">Clear fingerprint data</string>
 </resources>
